--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # This env file should be checked into source control
 # This is the place for default values for all environments
 # Values in `.env.local` and `.env.production` will override these values
+// TODO - remove from repo for production app
+SESSION_SECRET_KEY=A6E223CF073B70C259D9B309C73C5BC4
