--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,2 @@
 [phases.install]
-onlyIncludeFiles = ['package.json', 'pnpm-lock.yaml', 'db']
+onlyIncludeFiles = ['package.json', 'pnpm-lock.yaml']
