--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "3.10.0",
+    "@prisma/client": "4.6.1",
     "blitz": "0.45.3",
-    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
-    "react": "18.0.0-beta-149b420f6-20211119",
-    "zod": "3.12.0",
     "final-form": "4.20.6",
-    "react-final-form": "6.5.8"
+    "react": "18.0.0-beta-149b420f6-20211119",
+    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
+    "react-final-form": "6.5.8",
+    "zod": "3.12.0"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -38,11 +38,11 @@
     "eslint": "7.32.0",
     "husky": "7.0.4",
     "lint-staged": "11.3.0-beta.2",
-    "prettier-plugin-prisma": "3.10.0",
     "prettier": "2.5.1",
+    "prettier-plugin-prisma": "3.10.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "3.10.0",
+    "prisma": "4.6.1",
     "typescript": "~4.5"
   },
   "private": true
